# LiDAR_Inertial_Localiztion

./: CMakeLists.txt  README.MD  package.xml
include/: utils.cpp
include/IMULiDARicp/: imuLiDARicp.cpp  imuLiDARicp.h
include/IMU_preintergration_lib/: IMU_preintergration_lib.cpp  IMU_preintergration_lib.h
include/LiDAR_matching_lib/: LiDAR_matching_lib.cpp  LiDAR_matching_lib.h
include/combineICP/: lidarCeres.cpp  opt_ICP_CERES.cpp  opt_ICP_CERES.h
include/pointType/: pointTypes.h
include/registration/: registration.cpp  registration.h
launch/: localization.launch  rviz.rviz
src/: IMU_preintergration_node.cpp  LiDAR_matching.cpp  LiDAR_matching_node.cpp
